[gd_scene load_steps=6 format=2]

[ext_resource path="res://Effects/Fireball/Fireball.tscn" type="PackedScene" id=1]
[ext_resource path="res://Effects/Fireball/FireballSpell.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 1.87461

[sub_resource type="CircleShape2D" id=2]
radius = 4.64071

[sub_resource type="CircleShape2D" id=3]
radius = 20.0

[node name="FireBall" type="RigidBody2D"]
collision_mask = 5
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FireBallEffect" parent="." instance=ExtResource( 1 )]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="BlastArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlastArea"]
shape = SubResource( 3 )

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="BlastArea" to="." method="_on_BlastArea_body_entered"]
[connection signal="body_exited" from="BlastArea" to="." method="_on_BlastArea_body_exited"]
[connection signal="timeout" from="DurationTimer" to="." method="explode"]
